# solana-stealth

./: README.md  ROADMAP.md  blog_post.md  chat  package-lock.json  package.json  tsconfig.json  verify_register.js  vitest.config.ts
.github/workflows/: test.yml
app/: .page.tsx.~undo-tree~  globals.css  layout.tsx  page.tsx
app/api/actions/donate/[username]/: route.test.ts  route.ts
app/components/: WalletContextProvider.tsx
app/dashboard/: page.tsx
app/register/: .page.tsx.~undo-tree~  page.tsx
components/ui/: badge.tsx  button.test.tsx  button.tsx  card.tsx  input.test.tsx  input.tsx
lib/: utils.test.ts
programs/: id_verification.txt
programs/stealth-registry/: Anchor.toml  binary_strings.txt  package.json
programs/stealth-registry/programs/stealth-registry/: Cargo.toml
programs/stealth-registry/programs/stealth-registry/src/: lib.rs
programs/stealth-registry/scripts/: test-ci.sh
programs/stealth-registry/tests/: stealth-registry.ts
scripts/: build-program.sh  calc-discriminator.ts  check-constants.js  check-discriminator-names.js  check-invoke.js  check-stateless.js  check-tree-owner.ts  debug-api-local.ts  debug-instruction-data.ts  debug-unshield-patch.ts  debug-unshield.ts  debug-user-tx.ts  decode-pubkey.ts  fetch-tx-logs.ts  inspect-exports.js  inspect-idl.js  inspect-light-system.js  inspect-trees.js  repro-register.ts  simulate-decompress.js  test-decompress.js  test-decompress.ts  test-register.ts  verify-patch-logic.ts  verify-shield.ts
test/: setup.ts
